[gd_scene load_steps=33 format=2]

[ext_resource path="res://Player/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Model/PlayerBottom.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Materials/PlayerBody.tres" type="Material" id=3]
[ext_resource path="res://Materials/BlueEmissive.tres" type="Material" id=4]
[ext_resource path="res://Player/Scripts/Thrust.gd" type="Script" id=5]
[ext_resource path="res://Weapon/WeaponGroup.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/Overlock/Overclock.gd" type="Script" id=7]
[ext_resource path="res://Audio/OverclockPlayer/AudioOverclockStart.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/OverclockPlayer/AudioOverclockStop.wav" type="AudioStream" id=9]
[ext_resource path="res://Overlay/Overlay.tscn" type="PackedScene" id=10]
[ext_resource path="res://Overlay/OverlayOverclock.png" type="Texture" id=11]
[ext_resource path="res://Player/Scripts/FOV.gd" type="Script" id=12]
[ext_resource path="res://Enemy/Scripts/Stun.gd" type="Script" id=13]
[ext_resource path="res://VFX/Characters/StunEffect.tscn" type="PackedScene" id=14]
[ext_resource path="res://Audio/OverclockPlayer/AudioOverclockStun.wav" type="AudioStream" id=15]
[ext_resource path="res://Player/Scripts/PlayerInput.gd" type="Script" id=16]
[ext_resource path="res://Player/Shield.tscn" type="PackedScene" id=17]
[ext_resource path="res://Audio/Player/PlayerDeath.wav" type="AudioStream" id=18]
[ext_resource path="res://VFX/Environment/ExplosionPlayerDeath_v2.tscn" type="PackedScene" id=19]
[ext_resource path="res://VFX/Utilities/EffectPlayer.gd" type="Script" id=20]
[ext_resource path="res://VFX/Characters/Player/PlayerDamagedParticle.tscn" type="PackedScene" id=21]
[ext_resource path="res://Player/DeathExplosion.gd" type="Script" id=22]
[ext_resource path="res://CameraEnv.tres" type="Environment" id=23]
[ext_resource path="res://Menu/HUD/Bars/Bars.tscn" type="PackedScene" id=24]
[ext_resource path="res://Console/Console.tscn" type="PackedScene" id=25]
[ext_resource path="res://Menu/HUD/WeaponIcons/WeaponIcons.tscn" type="PackedScene" id=26]
[ext_resource path="res://VFX/Characters/Player/PlayerMoveParticle.tscn" type="PackedScene" id=27]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 1.185, 1.28471, 1.22699 )

[sub_resource type="Animation" id=2]

resource_name = "PlayerDeath"
length = 1.25
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponGroup:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lowerpart:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Stats:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerDeath:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("ExplosionPlayerDeath_v2")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PlayerDamagedParticle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("PlayerMoveParticle:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="SphereShape" id=3]

radius = 200.0

[sub_resource type="World" id=4]

environment = ExtResource( 23 )

[sub_resource type="ViewportTexture" id=5]

resource_local_to_scene = true
flags = 0
viewport_path = NodePath("Viewport")

[node name="Player" type="KinematicBody" index="0" groups=[
"Player",
]]

transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0 )
input_ray_pickable = false
input_capture_on_drag = false
collision_layer = 1
collision_mask = 10
axis_lock_linear_x = false
axis_lock_linear_y = true
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = true
axis_lock_angular_z = false
collision/safe_margin = 0.1
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pause", "Transform", "collision" ]
maxHealth = 500.0
speed = 35.0
overclockstunDuration = 5

[node name="Lowerpart" type="MeshInstance" parent="." index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 2 )
skeleton = NodePath("..")
material/0 = ExtResource( 3 )
material/1 = ExtResource( 4 )
script = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility", "material" ]
rotationTilt = 10
dampTime = 8.0

[node name="WeaponGroup" parent="." index="1" instance=ExtResource( 6 )]

_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape" type="CollisionShape" parent="." index="2"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35476, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Overclock" type="Node" parent="." index="3"]

script = ExtResource( 7 )
defaultPoints = 10
maxPoints = 10
depletionRate = 2.1
increaseAmountStep = 0.5

[node name="OverclockStartAudio" type="AudioStreamPlayer" parent="Overclock" index="0"]

stream = ExtResource( 8 )
volume_db = 10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "VFX"

[node name="OverclockEndAudio" type="AudioStreamPlayer" parent="Overclock" index="1"]

stream = ExtResource( 9 )
volume_db = 10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "VFX"

[node name="Overlay" parent="Overclock" index="2" instance=ExtResource( 10 )]

modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 11 )

[node name="FOV" type="Spatial" parent="." index="4"]

script = ExtResource( 12 )
_sections_unfolded = [ "Transform" ]
viewAngle = 80
viewRadius = 50

[node name="OverclockStun" type="Spatial" parent="." index="5"]

script = ExtResource( 13 )
_sections_unfolded = [ "Transform" ]
defaultDuration = 3.0

[node name="StunEffect" parent="OverclockStun" index="0" instance=ExtResource( 14 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.947389, 0 )

[node name="StunAudio" type="AudioStreamPlayer" parent="OverclockStun" index="1"]

stream = ExtResource( 15 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "VFX"

[node name="PlayerInput" type="Node" parent="." index="6"]

script = ExtResource( 16 )

[node name="PowerUpStack" type="Node" parent="." index="7"]

[node name="Shield" parent="." index="8" instance=ExtResource( 17 )]

transform = Transform( 0.609529, 0, 0, 0, 0.609529, 0, 0, 0, 0.609529, 0, 0.868527, 0 )

[node name="Overlay" parent="." index="9" instance=ExtResource( 10 )]

modulate = Color( 1, 1, 1, 0 )

[node name="PlayerDeath" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 18 )
volume_db = 20.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "VFX"

[node name="PlayerDeathAnim" type="AnimationPlayer" parent="." index="11"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/PlayerDeath = SubResource( 2 )
blend_times = [  ]

[node name="ExplosionPlayerDeath_v2" parent="." index="12" instance=ExtResource( 19 )]

script = ExtResource( 20 )
useAnimationPlayer = true
animationName = "Play"
oneShot = true
destroyOnFinished = false
forceRestart = false

[node name="PlayerDamagedParticle" parent="." index="13" instance=ExtResource( 21 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.28377, 0.461457 )
_sections_unfolded = [ "Visibility" ]

[node name="DeathExplosion" type="Area" parent="." index="14"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
script = ExtResource( 22 )
_sections_unfolded = [ "Collision" ]

[node name="Range" type="CollisionShape" parent="DeathExplosion" index="0"]

shape = SubResource( 3 )
disabled = false

[node name="Viewport" type="Viewport" parent="." index="15"]

editor/display_folded = true
arvr = false
size = Vector2( 400, 333 )
own_world = false
world = SubResource( 4 )
transparent_bg = true
msaa = 0
hdr = false
disable_3d = false
usage = 0
debug_draw = 0
render_target_v_flip = true
render_target_clear_mode = 0
render_target_update_mode = 2
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = true
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 0
shadow_atlas_quad_1 = 0
shadow_atlas_quad_2 = 0
shadow_atlas_quad_3 = 0
_sections_unfolded = [ "GUI", "Render Target", "Rendering" ]

[node name="Bars" parent="Viewport" index="0" instance=ExtResource( 24 )]

[node name="Stats" type="Sprite3D" parent="." index="16"]

transform = Transform( 1.25, 0, 0, 0, -5.46392e-008, 1.25, 0, -1.25, -5.46392e-008, 0, 0.5, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
centered = true
offset = Vector2( 0, 0 )
flip_h = false
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.01
axis = 2
transparent = true
shaded = false
double_sided = true
alpha_cut = 0
texture = SubResource( 5 )
vframes = 1
hframes = 1
frame = 0
region_enabled = false
region_rect = Rect2( 0, 0, 0, 0 )
_sections_unfolded = [ "Transform", "Visibility", "material" ]

[node name="HUD" type="Control" parent="." index="17"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[node name="Console" parent="HUD" index="0" instance=ExtResource( 25 )]

[node name="WeaponIcons" parent="HUD" index="1" instance=ExtResource( 26 )]

[node name="PlayerMoveParticle" parent="." index="18" instance=ExtResource( 27 )]

transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0.245115, 0.108294 )
_sections_unfolded = [ "Transform", "Visibility" ]

[connection signal="weaponChange" from="WeaponGroup" to="HUD/WeaponIcons" method="onWeaponChange"]

[connection signal="amountChange" from="Overclock" to="Viewport/Bars" method="onOverclockAmountChange"]

[connection signal="overclockIsEmpty" from="Overclock" to="OverclockStun" method="onStun"]

[connection signal="setOverclock" from="Overclock" to="HUD/WeaponIcons" method="onOverclockUse"]

[connection signal="weaponChange" from="Overclock" to="Viewport/Bars" method="onWeaponChanged"]

[connection signal="animation_finished" from="PlayerDeathAnim" to="." method="onPlayerDied"]


